# gopher-flutter-client

./: .last_build_id  DISTRIBUTION.md  LICENSE  README.md  RELEASES.md  analysis_options.yaml  flutter_service_worker.js  index.html  main.dart.js  manifest.json  pubspec.yaml  version.json
.github/workflows/: build-releases.yml  deploy-web.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gopher_flutter_client/: MainActivity.kt
assets/: NOTICES
docs/: index.html
lib/: main.dart
lib/models/: gopher_item.dart
lib/screens/: bookmarks_screen.dart  history_screen.dart  home_screen.dart
lib/services/: app_state.dart  gopher_client.dart  storage_service.dart
lib/widgets/: address_bar.dart  menu_view.dart  text_view.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: CMakeLists.txt
macos/Flutter/: Flutter-Generated.xcconfig
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig  Warnings.xcconfig
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  utils.cpp  utils.h  win32_window.cpp  win32_window.h
